--- a/18_react-m-program/hkzf-mobile/package.json
+++ b/18_react-m-program/hkzf-mobile/package.json
@@ -8,10 +8,12 @@
     "@testing-library/user-event": "^12.1.10",
     "antd-mobile": "^2.3.4",
     "axios": "^0.21.1",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-virtualized": "^9.21.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -39,6 +41,13 @@
     ]
   },
   "devDependencies": {
+    "cnpm": "^6.1.1",
+    "i": "^0.3.6",
+    "node-sass": "^4.14.1",
     "sass-loader": "^7.3.1"
+  },
+  "peerDependencies": {
+    "react": "^15.3.0 || ^16.0.0-alpha || ^17.0.1",
+    "react-dom": "^15.3.0 || ^16.0.0-alpha || ^17.0.1"
   }
 }
