--- a/xiaodiumi/package.json
+++ b/xiaodiumi/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "ant-design-pro": "^2.3.2",
     "antd": "^3.22.0",
-    "axios": "^0.19.0"
+    "axios": "^0.19.0",
+    "gifsicle": "^5.2.0",
+    "pngquant-bin": "^6.0.0"
   },
   "devDependencies": {
     "umi": "^2.8.18",
